# shelter

./: Makefile  README.md  shelter
default_component/: docker_init  initrd.img  start.sh
grpc_guest/: Cargo.toml  build.rs  sample
grpc_guest/src/: client.rs  main.rs
inc/: initrd_creator.h  log.h  main.h  run.h  tools.h  vm_manager.h  vsock_server.h
ra/: check_cert_chain.c  guest_boot.c  guest_continue.c  ra.sh  remote_attestation.c  server_boot.c  server_continue.c
src/: initrd_creator.c  log.c  main.c  run.c  tools.c  vm_manager.c  vsock_server.c
tests/: Dockerfile  md5.c  ml_test.py
vsock/: b_relay.c  c_client.c
